<resources>
    <string name="app_name">Hotels.NG Android App</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="payment_options">Payment Options</string>
    <string name="your_info">Your Info</string>
    <string name="check_out">Check out</string>
    <string name="checkout_name">Full Name</string>
    <string name="checkout_phone">Phone</string>
    <string name="checkout_email">Email Address</string>
    <string name="checkout_button">Proceed</string>
    <string name="atm">ATM</string>
    <string name="bank_deposit">BANK DEPOSIT</string>
    <string name="pay_at_the_hotel">PAY AT THE HOTEL</string>

    <string name="facebook_app_id">1204775476320820</string>
    <string name="fb_login_protocol_scheme">fb1204775476320820</string>


</resources>
