<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/checkoutDefault">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_spinner_border"
       >

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_title"
            android:popupBackground="?android:attr/findOnPageNextDrawable" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_grey_border">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/checkout_name"
            android:ems="10"
            android:textColor="@color/checkoutGrey"
            android:id="@+id/editText_name" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_spinner_border">
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/spinner_country"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_grey_border">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/checkoutGrey"
            android:text="@string/checkout_phone"
            android:ems="10"
            android:id="@+id/editText_phone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_grey_border">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/checkoutGrey"
            android:text="@string/checkout_email"
            android:ems="10"
            android:id="@+id/editText_email" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">
        <Button
            android:text="@string/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:radius="10dp"
            android:textColor="@color/checkoutDefault"
            android:background="@drawable/rounded_corner_button_border"/>

    </LinearLayout>
</LinearLayout>